# 2DOF-Painter-Robot-Arm

./: .gitignore  .gitmodules  README.md
BrachioGraph/: BrachioGraph.cpp  CMakeLists.txt  Makefile  README.md  bg.cpp  brachioGraph  brachiograph.cpp  linedraw.cpp  plotter.cpp  server_code2.cpp  test  test.cpp  test.py  utils.cpp
BrachioGraph/images/: cat.json
BrachioGraph/sensor/: README.md
BrachioGraphWithServer/: CMakeLists.txt  README.md  bg.cpp  brachiograph.cpp  mainserver.cpp  monotonic  monotonic.cpp  monotonic.py  pantograph.cpp  plotter.cpp  server_code1.cpp  test.cpp  turtle_plotter.cpp
BrachioGraphWithServer/linedraw/: linedraw.py
GUI/build-scara_gui-Desktop_Qt_6_6_0_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake  scara_gui
GUI/build-scara_gui-Desktop_Qt_6_6_0_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-59f565095449f654e855.json  cmakeFiles-v1-d55526ae222dd1489cf9.json  cmakeFiles-v1-e4be69b8c40cc82db1d9.json  codemodel-v2-6025dcd15557b928aa6c.json  codemodel-v2-73f00135d8d85be204f9.json  codemodel-v2-cf67e77912313aa9f5e5.json  directory-.-Debug-1005110f0c1bf0d10676.json  directory-.-Debug-cc90e1c2c94faadcc87d.json  index-2023-11-11T06-15-05-0828.json  index-2023-11-13T10-17-19-0191.json  target-scara_gui-Debug-8bf3e3a9fa5ea8460c59.json  target-scara_gui-Debug-a8e073afd2cc91c8b8c3.json  target-scara_gui-Debug-f387b4bcf12e371b93f2.json  target-scara_gui_autogen-Debug-0232de0fd000e6bc0f4f.json  target-scara_gui_autogen-Debug-259e0613f96ca210dee5.json
GUI/build-scara_gui-Desktop_Qt_6_6_0_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-7c7c331cd0393e2f48e6.json  cmakeFiles-v1-442db9e4e3ab25892027.json  cmakeFiles-v1-eb045e95a3266d088c95.json  codemodel-v2-592ab62055838d2fbe51.json  codemodel-v2-7f4039cdcd3c74a925fb.json  codemodel-v2-c536b6cd11d02a00c6a6.json  directory-.-Debug-2ecfbd5ccac8fee7abd4.json  directory-.-Debug-be8e19c63dcc77f9e717.json  directory-.-Debug-e513b8fa28de94f13228.json  index-2023-11-13T10-16-54-0755.json  index-2023-11-13T13-01-50-0725.json  index-2023-11-17T08-37-28-0265.json  index-2023-11-19T13-45-50-0794.json  target-scara_gui-Debug-2dc57b26405b3a34be47.json  target-scara_gui-Debug-3c882ec1905b1d01b2dd.json  target-scara_gui-Debug-b166cd4123f1f4b34da1.json  target-scara_gui_autogen_timestamp_deps-Debug-800f9e2d20addcb1f860.json  target-scara_gui_autogen_timestamp_deps-Debug-8ad2880d291149d706df.json
GUI/build-scara_gui-Desktop_Qt_6_6_0_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
GUI/build-scara_gui-Desktop_Qt_6_6_0_GCC_64bit-Debug/scara_gui_autogen/: deps  mocs_compilation.cpp
GUI/build-scara_gui-Desktop_Qt_6_6_0_GCC_64bit-Debug/scara_gui_autogen/EWIEGA46WW/: moc_CropFeature.cpp  moc_CropFeature.cpp.d  moc_DragDropScene.cpp  moc_DragDropScene.cpp.d  moc_DrawingApp.cpp  moc_DrawingApp.cpp.d  moc_DrawingArea.cpp  moc_DrawingArea.cpp.d  moc_ImageUploader.cpp  moc_ImageUploader.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  qrc_resources.cpp
GUI/build-scara_gui-Desktop_Qt_6_6_0_GCC_64bit-Debug/scara_gui_autogen/include/: main.moc  main.moc.d
GUI/scara_gui/: CMakeLists.txt  CMakeLists.txt.user.5e465ee  CMakeLists.txt.user.68c2606  CSVPlotter.cpp  CSVPlotter.h  ColorDialog.cpp  ColorDialog.h  CropFeature.cpp  CropFeature.h  DragDropScene.cpp  DragDropScene.h  DrawingApp.cpp  DrawingApp.h  DrawingArea.cpp  DrawingArea.h  ExamplesApp.cpp  ExamplesApp.h  ExamplesWidget.cpp  ExamplesWidget.h  Gazebo.cpp  Gazebo.h  GazeboApp.cpp  GazeboApp.h  ImagePathsConfig.cpp  ImagePathsConfig.h  ImageUploader.cpp  ImageUploader.h  Makefile  NumberSelectionDialog.cpp  NumberSelectionDialog.h  RobotMainMenu.cpp  RobotMainMenu.h  RobotProjectionWidget.cpp  RobotProjectionWidget.h  RoboticArmWidget.cpp  RoboticArmWidget.h  ServerListenerThread.cpp  ServerListenerThread.h  Settings.cpp  Settings.h  (+19 more)
GUI/scara_gui/.qt/: QtDeploySupport.cmake  deploy_scara_gui_4b82a3d58f.cmake  scara_gui-plugins.cmake
GUI/scara_gui/.qt/deploy_qml_imports/: scara_gui.cmake
GUI/scara_gui/.qt_plugins/: Qt6_QmlPlugins_Imports_scara_gui.rsp
GUI/scara_gui/tmp/: africa.json  sent.json
mobile/: homescreen.dart  mobile.dart  pubspec.yaml  qt_android_kurulum.txt  server  server.cpp  test.dart
mobile/android/: build.gradle
mobile/android/app/: build.gradle
mobile/flutter-v2/lib/: main.dart
mobile/flutter-v2/lib/helpers/: drawing_state.dart
mobile/flutter-v2/lib/screens/: XOXScreen.dart  favourite_screen.dart  welcome_screen.dart
mobile/flutter-v2/lib/screens/dashboard/: dashboard_screen.dart  navigator_item.dart
mobile/flutter-v2/lib/screens/home/: home_screen.dart
mobile/flutter-v2/lib/styles/: colors.dart
mobile/lib/: app.dart
mobile/lib/helpers/: drawing_state.dart
mobile/lib/screens/: XOXScreen.dart  splash_screen.dart  welcome_screen.dart
mobile/lib/screens/dashboard/: dashboard_screen.dart
mobile/lib/screens/home/: home_screen.dart
mobile_server/: CMakeLists.txt  README.md  mainserver.cpp  server_code1.cpp  server_code1.h  server_code2.cpp
simulate_embedded/: BrachioGraph.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  client.cpp  cmake_install.cmake  gazebo_client  gazebo_client.cpp  gazebo_output.txt  linedraw.py  mainserver.cpp  send_json_to_qt  send_json_to_qt.cpp  server  server_code1.cpp  server_code1.h  server_code2.cpp  server_code2.h  test  test.cpp  test.json  tic tac toe.docx  utils.cpp
simulate_embedded/images/: cat.json
simulate_embedded/tmp/: received.json  sent.json
